--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -4,7 +4,7 @@
 .box-master{
   display: flex;
   flex-direction: column;
-  background-color: rgb(174, 181, 250);
+  background-color: rgb(48, 48, 92);
   padding: 16px;
   margin: 16px;
   border-radius: 8px;
@@ -15,13 +15,26 @@
   flex-direction: row;
   flex: 1;
   margin: 16px;
-  border: 1px solid black;
+  border: 1px solid rgb(225, 255, 232);
   padding: 16px;
+}
+
+.box-row-fill {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
 }
 
 .box {
   min-height: 256px;
-  border: 1px solid black;
+  border: 1px solid rgb(225, 255, 232);
+}
+
+.box-grid {
+  min-height: 256px;
+  border: 1px solid rgb(225, 255, 232);
+  display: flex;
+  flex-direction: column;
 }
 
 #box1 {
@@ -48,18 +61,18 @@
 
 #box8 {
   border: 0;
-  border-right: 1px solid black;
+  border-right: 1px solid rgb(225, 255, 232);
 }
 
 #box9 {
   border: 0;
-  border-right: 1px solid black;
-  border-left: 1px solid black;
+  border-right: 1px solid rgb(225, 255, 232);
+  border-left: 1px solid rgb(225, 255, 232);
 }
 
 #box10 {
   border: 0;
-  border-left: 1px solid black;
+  border-left: 1px solid rgb(225, 255, 232);
 }
 
 #box11 {
@@ -91,4 +104,48 @@
 
 #box16 {
   min-height: 128px;
+}
+
+#box17 {
+  flex-basis: 85%;
+  margin-right: 16px;
+  min-height: 100px;
+}
+
+#box18 {
+  flex: 1;
+  min-height: 100px;
+}
+
+#box19, #box26, #box33 {
+  min-height: 100px;
+}
+
+#box20 {
+  flex-basis: 70%;
+  margin-right: 16px;
+}
+
+#box21, #box27 {
+  flex: 1;
+  border: 0;
+  padding: 0;
+}
+
+#box22, #box23, #box24, #box25, #box28, #box29, #box30, #box31 {
+  flex: 1;
+  min-height: 100%;
+}
+
+#box22, #box24, #box28, #box30 {
+  margin-right: 16px;
+}
+
+#box32 {
+  flex-basis: 70%;
+  margin-left: 16px;
+}
+
+#fill-1, #fill-3 {
+  margin-bottom: 16px;
 }
