--- a/css/style-base.css
+++ b/css/style-base.css
@@ -16,6 +16,7 @@ body{
 h1,h2,h3{
   margin: 20px 10px;
 }
+
 .container{
   width: 97%;
   height: 900px;
@@ -25,15 +26,6 @@ h1,h2,h3{
   border: 1px solid #cccccc;
 }
 
-.retangulo-1{
-
-}
-.retangulo-2{
-
-}
-.retangulo-3{
-
-}
-.retangulo-4{
-
+ul {
+  margin-left: 24px;
 }
