--- a/css/style-base.css
+++ b/css/style-base.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 
-@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 *{
@@ -16,4 +15,13 @@ body{
 
 h1,h2,h3{
   margin: 20px 10px;
+}
+
+.container {
+  width: 97%;
+  height: 800px;
+  padding: 10px;
+  margin: 10px;
+  background-color: #c2bee6;
+  border: 1px solid #cccccc;
 }
