--- a/css/style-base.css
+++ b/css/style-base.css
@@ -17,3 +17,13 @@ body{
 h1,h2,h3{
   margin: 20px 10px;
 }
+
+#container{
+  margin: 10px;
+  width: 97%;
+  height: 800px;
+  padding: 10px;
+  background-color: rgb(197, 92, 233;
+  border: 1px solid rgba(255, 255, 255, 0.96);
+
+}
