--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,1 +1,33 @@
 @charset "UTF-8";
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  font-size: 15px;
+}
+
+h1 h2 h3{
+  margin: 20px 30px;
+}
+
+.container {
+  width: 97%;
+  height: 900px;
+  margin: 10px;
+  padding: 10px;
+  background-color: #c2bee6;
+  border: 1px solid #cccccc;
+}
+
+.box{
+  display: block;
+}
+
+.box1 {
+  flex-grow: 1;
+  border: 1px solid;
+}
