Criação das 4 box pais

--- a/css/style-base.css
+++ b/css/style-base.css
@@ -24,3 +24,16 @@ h1,h2,h3{
   background-color: #c2bee6;
   border: 1px solid #cccccc;
 }
+
+.retangulo-1{
+
+}
+.retangulo-2{
+
+}
+.retangulo-3{
+
+}
+.retangulo-4{
+
+}
