--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,1 +1,15 @@
 @charset "UTF-8";
+
+.container{
+  display: flex;
+  flex-direction: column;
+}
+.box{
+  border: 1px solid #FF0000;
+  display: block;
+  width: 97%;
+  height: 150px;
+  margin:20px;
+  padding: 10px;
+  max-width: 1100px;
+}
