--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,1 +1,17 @@
 @charset "UTF-8";
+
+.container{
+  display: flex;
+  flex-direction: column;
+}
+
+.box{
+  display: block;
+  width: 97%;
+  max-width: 1100px;
+  height: 150px;
+  margin: 20px;
+  padding: 10px;
+  color: #fff;
+  border: 2px solid ;
+}
