--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,19 +1,36 @@
 @charset "UTF-8";
 
-.box-1 {
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.box {
   width: 99%;
-  height: 200px;
   padding: 10px;
-  margin: 10px;
-  background-color: #eec27e;
   border: 1px solid #cccccc;
 }
 
+.box-1 {
+  height: 100px;
+  background-color: #eec27e;
+  margin: 20px 10px;
+}
+
 .box-2 {
-    width: 99%;
-    height: 300px;
-    padding: 10px;
-    margin: 30px 10px 10px 10px;
+    height: 200px;
     background-color: #acf2ba;
-    border: 1px solid #cccccc;
+    margin: 10px;
+}
+
+.box-3 {
+  height: 250px;
+  background-color: #f5c3f1;
+  margin: 20px 10px;
+}
+
+.box-4 {
+  height: 220px;
+  background-color: #9ceef0;
+  margin: 10px 10px 10px 10px;
 }
