--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,33 +1,39 @@
 @charset "UTF-8";
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body{
-  font-size: 15px;
-}
-
-h1 h2 h3{
-  margin: 20px 30px;
-}
-
 .container {
-  width: 97%;
-  height: 900px;
-  margin: 10px;
-  padding: 10px;
-  background-color: #c2bee6;
-  border: 1px solid #cccccc;
+  display: flex;
+  flex-direction: column;
 }
 
 .box{
+  border: 1px solid #000000;
+  background-color: white;
   display: block;
+  width: 97%;
+  height: 150px;
+  margin: 20px;
+  padding: 10px;
+  max-width: 1100px;
 }
 
-.box1 {
-  flex-grow: 1;
-  border: 1px solid;
+.box-1 {
+  height: 70px;
+}
+
+
+
+.box-2{
+  flex-grow: 1px;
+  display: block;
+  height: 100px;
+}
+
+
+.box-3{
+  flex-grow: 3px;
+  height: 225px;
+}
+
+.box-4{
+  height: 150px;
 }
