adicionei 2 boxs dentro do 2º box

--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -12,6 +12,5 @@
   height: 150px;
   margin: 20px;
   padding: 10px;
-  color: #fff;
-  border: 2px solid ;
+  border: 2px solid rgb(101, 209, 237) ;
 }
