--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -13,3 +13,29 @@
   padding: 10px;
   max-width: 1100px;
 }
+.box-1{
+  flex-basis: 10%;
+}
+
+.box-2{
+  display: flex;
+  flex-direction: row;
+}
+
+.box-2-1{
+  flex-basis: 20%;
+  height: 100px;
+}
+.box-2-2{
+  flex-basis: 70%;
+  height: 100px;
+}
+
+.box-3{
+  display: flex;
+  flex-basis: 35%;
+}
+
+.box-4{
+  display: flex;
+}
