--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -6,11 +6,28 @@
 }
 
 .box{
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(22, 18, 10);
   display: block;
   width: 97%;
   height: 150px;
   margin: 20px;
   padding: 10px;
   max-width: 1100px;
+}
+
+.box-1{
+  flex-basis: 10%;
+
+}
+
+.box-2{
+  display: flex;
+}
+
+.box-3{
+  display: flex;
+}
+
+.box-4{
+  display: flex;
 }
