--- a/css/style-base.css
+++ b/css/style-base.css
@@ -23,7 +23,7 @@ h1,h2,h3{
   height: 900px;
   margin: 10px;
   padding: 10px;
-  background-color: rgba(35, 41, 112, 0.96);
+  background-color: rgb(118, 118, 191);
   border: 1px solid #cccccc;
 
 }
