--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -9,28 +9,68 @@
   width: 99%;
   padding: 10px;
   border: 1px solid #cccccc;
+  display: block;
 }
 
 .box-1 {
+  flex-basis: 10%;
   height: 100px;
   background-color: #eec27e;
   margin: 20px 10px;
 }
 
 .box-2 {
-    height: 200px;
-    background-color: #acf2ba;
-    margin: 10px;
+  display: flex;
+  flex-direction: row;
+  height: 200px;
+  background-color: #acf2ba;
+  margin: 10px;
 }
 
 .box-3 {
-  height: 250px;
+  display: flex;
+  height: 400px;
   background-color: #f5c3f1;
   margin: 20px 10px;
 }
 
 .box-4 {
+  display: flex;
   height: 220px;
   background-color: #9ceef0;
   margin: 10px 10px 10px 10px;
+}
+
+.box-5, .box-6 {
+  margin: 10px;
+}
+.box-5 {
+  flex-basis: 20%;
+  background-color: #0f9460;
+}
+
+.box-6 {
+  flex-basis: 80%;
+  background-color: #37cb45;
+}
+
+.box-7, .box-8, .box-9, .box-10 {
+  margin: 10px 40px;
+  flex-basis: 25%;
+}
+
+.box-7 {
+  background-color: #b922a8;
+}
+
+.box-8 {
+  background-color: #de2387;
+}
+
+.box-9 {
+  background-color: #e81c4e;
+}
+
+.box-10 {
+  background-color: #a1749f;
 }
