--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -35,7 +35,30 @@
   display: flex;
   flex-basis: 35%;
 }
-
+.box-3-1{
+  flex-basis: 22%;
+  height: 260px;
+}
+.box-3-2{
+  flex-basis: 22%;
+  height: 260px;
+}
+.box-3-3{
+  flex-basis: 22%;
+  height: 260px;
+}
+.box-3-4{
+  flex-basis: 22%;
+  height: 260px;
+}
 .box-4{
   display: flex;
+
+}
+.box-4-1{
+  flex-basis: 40%;
+  margin-left: 29%;
+  height: 100px;
+  border-top: 0px;
+  border-bottom: 0px;
 }
