--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -11,9 +11,9 @@
   display: block;
   width: 97%;
   height: 150px;
-  margin: 20px;
+  margin: 10px;
   padding: 10px;
-  max-width: 1100px;
+
 }
 
 .box-1 {
@@ -21,19 +21,38 @@
 }
 
 
-
 .box-2{
-  flex-grow: 1px;
-  display: block;
+
+  display: flex;
   height: 100px;
+}
+
+.box-filho2{
+  margin: 0 20px 0px 20px;
+  border: 1px solid #000000;
+  height: 75px;
+  background: white;
+  flex-grow: 1;
+}
+
+.box-filho21{
+  margin: 0 20px 20px 0;
+  border: 1px solid #000000;
+  height: 75px;
+  border: 1px solid #000000;
+  background: white;
+  flex-grow: 8;
+
 }
 
 
 .box-3{
   flex-grow: 3px;
   height: 225px;
+  display: flex;
 }
 
 .box-4{
   height: 150px;
+  display: flex;
 }
