--- a/css/style-base.css
+++ b/css/style-base.css
@@ -25,4 +25,6 @@ h1,h2,h3{
   padding: 10px;
   background-color: #c2bee6;
   border: 1px solid #cccccc;
+  display: flex;
+  flex-direction: column;
 }
