--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,1 +1,48 @@
 @charset "UTF-8";
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.box {
+  border: 1px solid #ff0000;
+  display: block;
+  width: 97%;
+  height: 150px;
+  margin: 20px auto;
+  padding: 10px;
+  max-width: 1100px;
+}
+
+.box-1 {
+  flex-basis: 10%;
+}
+
+.box-2 {
+  display: flex;
+  flex-basis: 20%;
+}
+
+.box-2-f1 {
+  width: 20%;
+  border: 1px solid #ff0000;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.box-2-f2 {
+  width: 80%;
+  border: 1px solid #ff0000;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+.box-3 {
+  display: flex;
+  flex-basis: 40%;
+}
+
+.box-4 {
+  flex-basis: 30%;
+}
