--- a/css/style-base.css
+++ b/css/style-base.css
@@ -17,3 +17,12 @@ body{
 h1,h2,h3{
   margin: 20px 10px;
 }
+
+.container{
+  width: 97%;
+  height: 900px;
+  margin: 10px;
+  padding: 10px;
+  background-color: #c2bee6;
+  border: 1px solid #cccccc;
+}
