--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -3,6 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  max-width: 1100px;
 }
 
 .box{
@@ -13,7 +14,7 @@
   height: 150px;
   margin: 10px;
   padding: 10px;
-
+  max-width: 1100px;
 }
 
 .box-1 {
@@ -22,34 +23,69 @@
 
 
 .box-2{
-
   display: flex;
-  height: 100px;
+  height: 110px;
 }
 
 .box-filho2{
-  margin: 0 20px 0px 20px;
+  margin: 0 15px 0px 15px;
   border: 1px solid #000000;
   height: 75px;
   background: white;
-  flex-grow: 1;
+  /*flex-grow: 1;*/
+  flex-basis: 225px;
 }
 
 .box-filho21{
-  margin: 0 20px 20px 0;
+  margin: 0 15px 0px 15px;
   border: 1px solid #000000;
   height: 75px;
-  border: 1px solid #000000;
   background: white;
-  flex-grow: 8;
-
+  /*flex-grow: 3;*/
+  flex-basis: 775px;
 }
 
 
 .box-3{
-  flex-grow: 3px;
   height: 225px;
   display: flex;
+}
+
+.box-filho3{
+  margin: 0 15px 0px 15px;
+  border: 1px solid #000000;
+  height: 200px;
+  background: white;
+  /*flex-grow: 1;*/
+  flex-basis: 250px;
+}
+
+.box-filho31{
+  margin: 0 15px 0px 25px;
+  border: 1px solid #000000;
+  height: 200px;
+  background: white;
+  /*flex-grow: 1;*/
+  flex-basis: 250px;
+}
+
+.box-filho32{
+  margin: 0 15px 0px 25px;
+  border: 1px solid #000000;
+  height: 200px;
+  border: 1px solid #000000;
+  background: white;
+  /*lex-grow: 1;*/
+  flex-basis: 250px;
+}
+
+.box-filho33{
+  margin: 0 15px 0px 25px;
+  border: 1px solid #000000;
+  height: 200px;
+  background: white;
+  /*flex-grow: 1;*/
+  flex-basis: 250px;
 }
 
 .box-4{
