--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -12,7 +12,7 @@
   height: 150px;
   margin: 20px;
   padding: 10px;
-  border: 2px solid rgb(242, 247, 249) ;
+  border: 1px solid rgb(242, 247, 249) ;
 }
 
 .box-1{
@@ -29,4 +29,16 @@
 
 .box-4{
   display: flex;
+}
+
+.box-5{
+  flex-basis: 20%;
+  height: 110px;
+  width: 50%;
+}
+
+.box-6{
+  flex-basis: 100%;
+  height: 110px;
+  width: 50%;
 }
