--- a/css/exerc-01.css
+++ b/css/exerc-01.css
@@ -1,7 +1,8 @@
 
-}
+
 .box-1 {
   flex-basis: 10%;
+
 }
 .box-2 {
   display: flex;
@@ -14,10 +15,21 @@
 }
 .box {
   border: 1px solid #ff0000;
-  display: block;
   width: 97%;
   height: 150px;
   margin: 20px;
   padding: 10px;
   max-width: 1100px;
+}
+.box-5 {
+  border: 1px solid black;
+  margin: 20px;
+  height: 100px;
+  width: 20%;
+}
+.box-6 {
+  border: 1px solid black;
+  margin: 20px;
+  height: 100px;
+  width: 80%;
 }
