--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -9,6 +9,16 @@
   border: 1px solid rgb(22, 18, 10);
   display: block;
   width: 97%;
+  /*height: 150px;*/
+  margin: 20px;
+  padding: 10px;
+  max-width: 1100px;
+}
+
+.box-new{
+  border: 1px solid rgb(22, 18, 10);
+  display: block;
+  width: 97%;
   height: 150px;
   margin: 20px;
   padding: 10px;
@@ -16,12 +26,20 @@
 }
 
 .box-1{
-  flex-basis: 8%;
+  flex-basis: 10%;
 
 }
 
 .box-2{
   display: flex;
+}
+
+.cai-1{
+  flex-basis: 250px;
+}
+
+.cai-2{
+  flex-grow: 1;
 }
 
 .box-3{
