--- a/css/style-base.css
+++ b/css/style-base.css
@@ -23,7 +23,7 @@ h1,h2,h3{
   height: 800px;
   margin: 10px;
   padding: 10px;
-  background-color: #c2bee6;
+  background-color: black;
   border: 1px solid #cccccc;
   display: flex;
   flex-direction: column;
