--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -90,6 +90,7 @@
   display: block;
   margin: 10px;
 }
+
 .box-5, .box-6 {
   display: flex;
   flex-direction: row;
@@ -112,6 +113,7 @@
 .box-6 {
   height: 250px;
 }
+
 .box-6a {
     background-color: #000000;
     flex-basis: 33%;
@@ -132,4 +134,35 @@
   background-color: #000000;
   width: 96%;
   margin: 10px 30px;
+}
+
+.box-c {
+    width: 99%;
+    padding: 10px;
+    display: block;
+    margin: 10px;
+}
+
+.box-8 {
+  background-color: #ffffff;
+}
+
+.box-9 {
+  background-color: #ffffff;
+}
+
+.box-10 {
+  background-color: #ffffff;
+}
+
+.box-11 {
+  background-color: #ffffff;
+}
+
+.box-12 {
+  background-color: #ffffff;
+}
+
+.box-13 {
+  background-color: #ffffff;
 }
