--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -15,30 +15,49 @@
   border: 1px solid rgb(242, 247, 249) ;
 }
 
+
 .box-1{
   flex-basis: 10%;
 }
 
 .box-2{
   display: flex;
+  height: 150px;
+  align-items: center;
 }
 
 .box-3{
   display: flex;
+  height: 250px;
+  align-items: center;
 }
 
 .box-4{
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box-5{
-  flex-basis: 20%;
+  flex-basis: 250px;
   height: 110px;
-  width: 50%;
+
 }
 
 .box-6{
-  flex-basis: 100%;
+  flex-grow: 1;
   height: 110px;
-  width: 50%;
+
+}
+
+.box-7{
+  height: 200px;
+}
+
+.box-8{
+  border-top: 0;
+  border-bottom: 0;
+  height: 110px;
+  width: 45%;
+
 }
