--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -138,7 +138,7 @@
 
 .box-c {
     width: 99%;
-    padding: 10px;
+    padding: 10px 5px;
     display: block;
     margin: 10px;
 }
@@ -166,13 +166,41 @@
 }
 
 
-.box-9 {
+.box-9, .box-11 {
   background-color: #ffffff;
   height: 50px;
 }
 
 .box-10 {
   background-color: #ffffff;
+  height: 200px;
+  display: flex;
+}
+
+.box-10a {
+  flex-basis: 70%;
+  background-color: #000000;
+}
+
+.box-10-divisao {
+  flex-basis: 30%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-top: auto;
+  margin-left: auto;
+  margin-bottom: auto;
+  margin-right: -30px;
+  padding: 13px 13px 13px 0px;
+}
+
+.box-10b, .box-10c, .box-10d, .box-10e {
+  background-color: #000000;
+  flex-basis: 40%;
+  display: flex;
+  width: 300px;
+  padding: 35px;
+  margin-top: 1px;
 }
 
 .box-11 {
