--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,1 +1,33 @@
 @charset "UTF-8";
+
+
+.container{
+  display: flex;
+  flex-direction: column;
+}
+
+.box{
+  border: 1px solid #ff0000;
+  display: block;
+  width: 97%
+  height: 150px;
+  margin: 20px;
+  padding: 10px;
+  max-width: 1100px;
+}
+
+.box-1{
+  flex-basis: 10%;
+}
+
+.box-2{
+  display: flex;
+}
+
+.box-3{
+  display: flex;
+}
+
+.box-4{
+  display: flex;
+}
