--- a/css/style-base.css
+++ b/css/style-base.css
@@ -21,8 +21,8 @@ h1,h2,h3{
 .container{
   width: 97%;
   height: 900px;
-  margin:10px;
-  padding:10px;
+  margin: auto;
+  padding: 10px 5px 10px 5px;
   background-color: #c2bee6;
   border: 1px solid #cccccc;
 }
