--- a/css/exer-02-flex.css
+++ b/css/exer-02-flex.css
@@ -33,25 +33,42 @@
   height: 400px;
 }
 .box-child-3{
-  flex-basis: 500px;
+  flex-basis: 480px;
   height: 400px;
 }
 
 .box-child-4{
   display: flex;
+  border-top: 0;
+  border-bottom: 0;
+  border-left: 0;
+  border-right: 0;
 }
 
 .box-child-5{
-  flex-basis: 300px;
+  flex-basis: 500px;
   height: 150px;
 }
 
 .box-child-6{
-  flex-basis: 300px;
+  flex-basis: 500px;
   height: 150px;
 }
 
 .box-child-7{
-  flex-basis: 300px;
+  flex-basis: 500px;
   height: 150px;
+}
+
+.box-child-8{
+  display: flex;
+  border-top: 0;
+  border-bottom: 0;
+  border-left: 0;
+  border-right: 0;
+}
+
+.box-child-9{
+  flex-basis: 100%;
+  height: 100px;
 }
