--- a/css/style-base.css
+++ b/css/style-base.css
@@ -28,3 +28,13 @@ h1,h2,h3{
   display: flex;
   flex-direction: column;
 }
+.container2 {
+  flex-direction: row;
+  display: flex;
+  width: 97%;
+  height: 800px;
+  margin: 10px;
+  padding: 10px;
+  background-color: black;
+  border: 1px solid blue;
+}
