--- a/css/style-base.css
+++ b/css/style-base.css
@@ -28,13 +28,34 @@ h1,h2,h3{
   display: flex;
   flex-direction: column;
 }
-.container2 {
+.container2{
   flex-direction: row;
   display: flex;
   width: 97%;
-  height: 800px;
-  margin: 10px;
+  height: 400px;
   padding: 10px;
   background-color: black;
-  border: 1px solid blue;
+  border: 1px solid black;
+  margin-left: 20px;
+}
+.container3{
+  flex-direction: row;
+  display: flex;
+  width: 97%;
+  height: 223px;
+  padding: 10px;
+  background-color: black;
+  border: 1px solid black;
+  margin-left: 20px;
+}
+.container4{
+  flex-direction: row;
+  display: flex;
+  width: 97%;
+  height: 120px;
+  padding: 10px;
+  background-color: black;
+  border: 1px solid black;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
