--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -6,7 +6,7 @@
 }
 
 .box{
-  border: 1px solid rgb(22, 18, 10);
+  border: 1px solid rgba(13, 255, 9, 0.52);
   display: block;
   width: 97%;
   /*height: 150px;*/
@@ -15,15 +15,7 @@
   max-width: 1100px;
 }
 
-.box-new{
-  border: 1px solid rgb(22, 18, 10);
-  display: block;
-  width: 97%;
-  height: 150px;
-  margin: 20px;
-  padding: 10px;
-  max-width: 1100px;
-}
+
 
 .box-1{
   flex-basis: 10%;
@@ -35,37 +27,48 @@
 }
 
 .cai-1{
+  height: 150px;
   flex-basis: 250px;
 }
 
 .cai-2{
-  flex-grow: 1;
+  height: 150px;
+  flex-grow: 2;
 }
 
 .box-3{
   display: flex;
 }
 
-.box-4{
-  display: flex;
-}
-
 .caix-1{
-  flex-basis: 320px;
-  height: 230px;
+  flex-grow: 1;
+  height: 200px;
 }
 
 .caix-2{
-  flex-basis: 320px;
-  height: 230px;
+  flex-grow: 1;
+  height: 200px;
 }
 
 .caix-3{
-  flex-basis: 320px;
-  height: 230px;
+  flex-grow: 1;
+  height: 200px;
 }
 
 .caix-4{
-  flex-basis: 320px;
-  height: 230px;
+  flex-grow: 1;
+  height: 200px;
+}
+
+.box-4{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.caixa-1{
+  height: 100px;
+  width: 50%;
+  border-top: 0;
+  border-bottom: 0;
 }
