--- a/css/style-base.css
+++ b/css/style-base.css
@@ -20,10 +20,9 @@ h1,h2,h3{
 
 .container{
   width: 97%;
-  height: 900px;
+  height: 1000px;
   margin: 10px;
   padding: 10px;
-  background-color: rgb(118, 118, 191);
-  border: 1px solid #cccccc;
-
-}
+  background-image: linear-gradient(170deg, #000000, #0a3056);
+  border: 3px solid #900101;
+  }
