--- a/css/exerc-03.css
+++ b/css/exerc-03.css
@@ -1,21 +1,160 @@
 
 .box19{
-
-  border: 1px solid white;
-  margin: 20px;
+  border: 1px solid blue;
+  margin: 10px;
   flex-basis: 100px;
   width: 97%;
   display: flex;
 }
 .box20{
+  background-color: red;
   border: 1px solid white;
-  margin: 20px;
-  height: 80px;
-  width: 70%;
+  margin: 10px;
+  height: 75px;
+  width: 71%;
+  margin-right: 20px;
 }
 .box21{
   border: 1px solid white;
-  margin-top: 20px;
-  height: 80px;
-  width: 24%;
+  margin-top: 10px;
+  height: 75px;
+  width: 25.3%;
+  background-color: red;
+}
+.box22{
+  border: 1px solid blue;
+  margin: 10px;
+  height: 35px;
+  width: 97%;
+}
+.box23{
+  border: 1px solid blue;
+  margin: 10px;
+  height: 200px;
+  width: 97%;
+  display: flex;
+
+}
+.box24{
+  border: 1px solid white;
+  margin: 10px;
+  height: 180px;
+  width: 50%;
+  display: flex;
+  background-color: red;
+}
+.box25{
+  border: 1px solid white;
+  margin: 0px;
+  height: 85px;
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: red;
+}
+.box26{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  background-color: red;
+}
+.box27{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: red;
+}
+.box28{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  background-color: red;
+}
+.box29{
+  border: 1px solid blue;
+  margin: 10px;
+  height: 30px;
+  width: 97%;
+}
+
+.box30{
+  border: 1px solid blue;
+  margin: 10px;
+  height: 200px;
+  width: 97%;
+  display: flex;
+  flex-direction: row-reverse;
+
+}
+.box31{
+  border: 1px solid white;
+  margin: 10px;
+  height: 180px;
+  width: 50%;
+  display: flex;
+  background-color: red;
+}
+.box32{
+  border: 1px solid white;
+  margin: 0px;
+  height: 85px;
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: red;
+}
+.box33{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  background-color: red;
+}
+.box34{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  background-color: red;
+  margin-bottom: 10px;
+}
+.box35{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  background-color: red;
+}
+.box36{
+  border: 1px solid blue;
+  margin: 10px;
+  flex-basis: 100px;
+  width: 97%;
+  display: flex;
+}
+
+.box400{
+  flex-direction: column;
+  border: 0px;
+  margin-top: 10px;
+  height: 100px;
+  width: 22%;
+}
+.box500{
+  flex-direction: column;
+  border: 0px;
+  margin: 10px 20px 10px 10px;
+  height: 100px;
+  width: 25%;
+}
+
+.box200{
+  flex-direction: column;
+  border: 0px;
+  margin-top: 10px;
+  height: 100px;
+  width: 22%;
+}
+.box300{
+  flex-direction: column;
+  border: 0px;
+  margin: 10px 10px 10px 20px;
+  height: 100px;
+  width: 25%;
 }
