--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,86 +1,84 @@
-@charset "UTF-8";
+.box1 {
+  flex-basis: 10%;
+}
 
-
-.container {
+.box2 {
   display: flex;
-  flex-direction: column;
+}
+
+.box3 {
+  display: flex;
+  flex-basis: 35%;
+}
+
+.box4 {
+  display: flex;
 }
 
 .box {
-  width: 99%;
+  border: 1px solid blue;
+  width: 97%;
+  height: 150px;
+  margin: 20px;
   padding: 10px;
-  border: 1px solid #cccccc;
-  display: block;
+  max-width: 1100px;
 }
 
-.box-1 {
-  flex-basis: 10%;
+.box5 {
+  border: 1px solid white;
+  margin: 20px;
   height: 100px;
-  background-color: #f2cf5a;
-  margin: 20px 10px;
+  width: 24%;
+  background-color: red;
 }
 
-.box-2 {
-  display: flex;
-  flex-direction: row;
+.box6 {
+  border: 1px solid white;
+  margin: 20px;
+  height: 100px;
+  width: 80%;
+  background-color: red;
+}
+
+.box7 {
+  border: 1px solid white;
+  margin: 20px;
   height: 200px;
-  background-color: #acf2ba;
-  margin: 10px;
+  width: 25%;
+  background-color: red;
 }
 
-.box-3 {
+.box8 {
+  border: 1px solid white;
+  margin: 20px;
+  height: 200px;
+  width: 25%;
+  background-color: red;
+}
+
+.box9 {
+  border: 1px solid white;
+  margin: 20px;
+  height: 200px;
+  width: 25%;
+  background-color: red;
+}
+
+.box10 {
+  border: 1px solid white;
+  margin: 20px;
+  height: 200px;
+  width: 25%;
+  background-color: red;
+}
+
+.box11 {
+  border: 1px solid white;
+  margin-left: 277px;
   display: flex;
-  height: 400px;
-  background-color: #f5c3f1;
-  margin: 20px 10px;
 }
 
-.box-4 {
-  display: flex;
-  height: 220px;
-  background-color: #9ceef0;
-  margin: 10px 10px 10px 10px;
-}
-
-.box-5, .box-6 {
-  margin: 10px;
-}
-.box-5 {
-  flex-basis: 20%;
-  background-color: #0f9460;
-}
-
-.box-6 {
-  flex-basis: 80%;
-  background-color: #37cb45;
-}
-
-.box-7, .box-8, .box-9, .box-10 {
-  margin: 10px 40px;
-  flex-basis: 25%;
-}
-
-.box-7 {
-  background-color: #b922a8;
-}
-
-.box-8 {
-  background-color: #de2387;
-}
-
-.box-9 {
-  background-color: #e81c4e;
-}
-
-.box-10 {
-  background-color: #a1749f;
-}
-
-.box-11 {
-  flex-basis: 70%;
-  margin: 10px 300px;
-  border-top: none;
-  border-bottom: none;
-  border-left: 2px solid #000000;
-  border-right: 2px solid #000000;
+.box12{
+  border: 1px solid white;
+  margin-left: 470px;
 }
