--- a/css/exer-03-flex.css
+++ b/css/exer-03-flex.css
@@ -11,7 +11,7 @@
   width: 97%;
   max-width: 1100px;
   height: 150px;
-  margin: 20px;
+  margin: 10px;
   padding: 10px;
 }
 
@@ -20,6 +20,40 @@
   border: 1px solid rgb(242, 247, 249) ;
   align-items: center;
 }
+
+.box-2{
+  height: 50px;
+  align-items: center;
+  border: 1px solid rgb(242, 247, 249) ;
+}
+
+.box-3{
+  height: 200px;
+  width: 97%;
+  margin: 10px;
+  border: 1px solid rgb(242, 247, 249) ;
+  display: flex;
+}
+
+.box-4{
+  height: 50px;
+  align-items: center;
+  border: 1px solid rgb(242, 247, 249) ;
+}
+
+.box-5{
+  display: flex;
+  height: 170px;
+  border: 1px solid rgb(242, 247, 249) ;
+  align-items: center;
+}
+
+.box-6{
+  height: 70px;
+  border: 1px solid rgb(242, 247, 249) ;
+  align-items: center;
+}
+
 
 .box1{
     height: 70px;
@@ -34,111 +68,55 @@
     margin-left: 30px;
 }
 
-
-
-.box-2{
-  height: 50px;
-  align-items: center;
+.box3{
   border: 1px solid rgb(242, 247, 249) ;
+  margin: 20px;
+  height: 160px;
+  width: 50%;
+  display: flex;
+  margin-top: 10px;
 }
-
-
-.box-3{
-  height: 170px;
-  border: 1px solid rgb(242, 247, 249) ;
-  align-items: center;
-}
-
 
 .box4{
-  height: 150px;
-  border: 1px solid rgb(242, 247, 249) ;
-  flex-basis: 650px;
-  margin-right: 30px;
+  flex-direction: column;
+  border: 0px;
+  margin-top: 10px;
+  height: 100px;
+  width: 22%;
+
 }
 
-.box-5{
-  height: 170px;
+.box5{
   border: 1px solid rgb(242, 247, 249) ;
-  align-items: center;
+  margin: 0px;
+  height: 80px;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-.box5-1{
-  height: 70px;
+.box6{
   border: 1px solid rgb(242, 247, 249) ;
-  flex-basis: 200px;
-  margin-right: 30px;
-}
-
-.box5-2{
-  height: 70px;
-  border: 1px solid rgb(242, 247, 249) ;
-  flex-basis: 200px;
-  margin-right: 30px;
-}
-
-.box5-3{
-  height: 70px;
-  border: 1px solid rgb(242, 247, 249) ;
-  flex-basis: 200px;
-  margin-right: 30px;
-  flex-wrap: wrap;
-}
-
-.box5-4{
-  height: 70px;
-  border: 1px solid rgb(242, 247, 249) ;
-  flex-basis: 200px;
-  margin-right: 30px;
-}
-
-
-.box-4{
-  height: 50px;
-  align-items: center;
-  border: 1px solid rgb(242, 247, 249) ;
-}
-
-
-.box8-1{
-  height: 70px;
-  border: 1px solid rgb(242, 247, 249) ;
-  flex-basis: 200px;
-  margin-right: 30px;
-}
-
-.box8-2{
-  height: 70px;
-  border: 1px solid rgb(242, 247, 249) ;
-  flex-basis: 200px;
-  margin-right: 30px;
-}
-
-.box8-3{
-  height: 70px;
-  border: 1px solid rgb(242, 247, 249) ;
-  flex-basis: 200px;
-  margin-right: 30px;
-  flex-wrap: wrap;
-}
-
-.box8-4{
-  height: 70px;
-  border: 1px solid rgb(242, 247, 249) ;
-  flex-basis: 200px;
-  margin-right: 30px;
+  height: 80px;
+  width: 100%;
 }
 
 .box7{
-  height: 150px;
-  border: 1px solid rgb(242, 247, 249) ;
-  flex-basis: 650px;
-  margin-right: 30px;
+  flex-direction: column;
+  border: 0px;
+  margin: 10px 10px 10px 20px;
+  height: 100px;
+  width: 25%
 }
 
-
-.box-6{
-  height: 200px;
+.box8{
   border: 1px solid rgb(242, 247, 249) ;
-  align-items: center;
+  height: 80px;
+  width: 90%;
+  margin-bottom: 10px;
+}
+
+.box9{
+  border: 1px solid rgb(242, 247, 249) ;
+  height: 80px;
+  width: 90%;
 }
