--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,12 +1,15 @@
 @charset "UTF-8";
 
-.container {
+.container{
   display: flex;
   flex-direction: column;
+  padding: 0px;
+  margin: 100px;
+  border: solid 1px #4682B4;
 }
 
 .box {
-  border: 1px solid #ff0000;
+  border: 1px solid #4682B4;
   display: block;
   width: 97%;
   height: 150px;
@@ -24,6 +27,21 @@
   flex-basis: 20%;
 }
 
+.box-filho1 {
+  width: 20%;
+  padding: 50px;
+  border: 1px solid #008B8B;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+.box-filho2 {
+  width: 74%;
+  border: 1px solid #008B8B;
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+
 
 .box-3 {
   display: flex;
@@ -31,8 +49,21 @@
   flex-direction: row;
 }
 
-
+.box-filho3{
+  border: 1px solid #008B8B;
+  width: 20%;
+  height: 90%;
+  margin: 10px 3%;
+}
 
 .box-4 {
   flex-basis: 30%;
+}
+
+.box-filho4 {
+  margin: 20px auto;
+  border-left: 1px solid #008B8B;
+  border-right: 1px solid #008B8B;
+  width: 55%;
+  height: 80%;
 }
