--- a/css/exer-02-flex.css
+++ b/css/exer-02-flex.css
@@ -1,85 +1,69 @@
 @charset "UTF-8";
 
-.container {
+.container{
   display: flex;
   flex-direction: column;
+  padding: 0px;
+  margin: 100px;
+  border: solid 1px #4682B4;
 }
 
 .box {
-  width: 99%;
-  padding: 10px;
-  border: 1px solid #cccccc;
+  border: 1px solid #4682B4;
   display: block;
+  width: 97%;
+  height: 150px;
+  margin: 20px auto;
+  padding: 10px;
+  max-width: 1100px;
 }
 
 .box-1 {
   flex-basis: 10%;
-  height: 100px;
-  background-color: #f2cf5a;
-  margin: 20px 10px;
 }
 
 .box-2 {
   display: flex;
-  flex-direction: row;
-  height: 200px;
-  background-color: #acf2ba;
-  margin: 10px;
+  flex-basis: 20%;
 }
+
+.box-filho1 {
+  width: 20%;
+  padding: 50px;
+  border: 1px solid #008B8B;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+.box-filho2 {
+  width: 74%;
+  border: 1px solid #008B8B;
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+
 
 .box-3 {
   display: flex;
-  height: 400px;
-  background-color: #f5c3f1;
-  margin: 20px 10px;
+  flex-basis: 40%;
+  flex-direction: row;
+}
+
+.box-filho3{
+  border: 1px solid #008B8B;
+  width: 20%;
+  height: 90%;
+  margin: 10px 3%;
 }
 
 .box-4 {
-  display: flex;
-  height: 220px;
-  background-color: #9ceef0;
-  margin: 10px 10px 10px 10px;
+  flex-basis: 30%;
 }
 
-.box-5, .box-6 {
-  margin: 10px;
-}
-.box-5 {
-  flex-basis: 20%;
-  background-color: #0f9460;
-}
-
-.box-6 {
-  flex-basis: 80%;
-  background-color: #37cb45;
-}
-
-.box-7, .box-8, .box-9, .box-10 {
-  margin: 10px 40px;
-  flex-basis: 25%;
-}
-
-.box-7 {
-  background-color: #b922a8;
-}
-
-.box-8 {
-  background-color: #de2387;
-}
-
-.box-9 {
-  background-color: #e81c4e;
-}
-
-.box-10 {
-  background-color: #a1749f;
-}
-
-.box-11 {
-  flex-basis: 70%;
-  margin: 10px 300px;
-  border-top: none;
-  border-bottom: none;
-  border-left: 2px solid #000000;
-  border-right: 2px solid #000000;
+.box-filho4 {
+  margin: 20px auto;
+  border-left: 1px solid #008B8B;
+  border-right: 1px solid #008B8B;
+  width: 55%;
+  height: 80%;
 }
