--- a/css/exer-02-flex.css
+++ b/css/exer-02-flex.css
@@ -22,31 +22,39 @@
   flex-basis: 10%;
 }
 
-.box-2 {
+.teste {
   display: flex;
   flex-basis: 20%;
+  width: 100%;
+  height: 50px;
+  margin: 15px auto;
+  padding: 1px;
+  max-width: 1366px;
 }
 
 .box-filho1 {
-  width: 20%;
-  padding: 50px;
+  width: 150%;
+  padding: 221px;
   border: 1px solid #008B8B;
-  margin-left: 20px;
+  margin-left: 0px;
   margin-bottom: 10px;
 }
 
 .box-filho2 {
-  width: 74%;
+  width: 80%;
   border: 1px solid #008B8B;
   margin-left: 30px;
   margin-bottom: 10px;
 }
 
-
-.box-3 {
+.teste-2{
   display: flex;
-  flex-basis: 40%;
-  flex-direction: row;
+  flex-basis: 20%;
+  width: 100%;
+  height: 50px;
+  margin: 15px auto;
+  padding: 1px;
+  max-width: 1366px;
 }
 
 .box-filho3{
@@ -56,11 +64,14 @@
   margin: 10px 3%;
 }
 
-.box-4 {
-  flex-basis: 30%;
+.box-filho4{
+  border: 1px solid #008B8B;
+  width: 20%;
+  height: 90%;
+  margin: 10px 3%;
 }
 
-.box-filho4 {
+.box-filho5 {
   margin: 20px auto;
   border-left: 1px solid #008B8B;
   border-right: 1px solid #008B8B;
