--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,1 +1,72 @@
 @charset "UTF-8";
+
+.container{
+  display: flex;
+  flex-direction: column;
+}
+
+.box{
+  display: block;
+  background-color: #106979;
+  width: 97%;
+  height: 150px;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid #a49b9d;
+  max-width: 1100px;
+}
+
+.box-1{
+  flex-basis: 10%;
+}
+
+.box-2{
+  display: flex;
+}
+
+.box-3{
+  display: flex;
+  height: 300px;
+}
+
+.box-4{
+  display: flex;
+}
+
+.box-01{
+  max-height: 90px;
+  max-width: 200px;
+}
+
+.box-02{
+  max-height: 90px;
+}
+
+.box-03{
+  height: 250px;
+  width: 550px;
+}
+
+.box-04{
+  height: 250px;
+  width: 550px;
+}
+
+.box-05{
+  height: 250px;
+  width: 550px;
+}
+
+.box-06{
+  height: 250px;
+  width: 550px;
+}
+
+.box-07{
+  display:flex;
+  height: 100px;
+  width: 500px;
+  margin: 10px 250px;
+  border-top: 0px;
+  border-bottom: 0px;
+}
